--- a/CHANGES
+++ b/CHANGES
@@ -347,6 +347,8 @@ Bug fixes
 - Sending self.__env['jobDic'][k][1] (job object) instead self.__env['jobDic'] (job dictionary) to storeWorkDirSize() from __checkWorkDir() (Monitor)
 - Sending job instead jobDic to storeWorkDirSize() from createLogFile() (JobLog)
 - Renamed config to configSiteMover to prevent problems seen on ND with late releases due to presence of a config module from TDAQ in the PYTHONPATH
+- Updated config to configSiteMover import (S3ObjectstoreHttpSiteMover, S3ObjectstoreSiteMover, S3SiteMover, SiteMover, mvSiteMover, objectstoreSiteMover, xrootdObjectstoreSiteMover, xrootdSiteMover)
+- Removed unused config import (pUtil)
 
 Alt stage-out
 - Added altStageOut data member plus handling (Job)
