--- a/CHANGES
+++ b/CHANGES
@@ -332,7 +332,10 @@ General changes
 - Removed unnecessary functions, getProdCmd3() and getProdCmd3Old() and updated usages from getJobExecutionCommandOld() (ATLASExperiment)
 - Simplified the implementation of getAnalysisRunCommand() in Experiment and moved the actual implementation to ATLASExperiment (Experiment, ATLASExperiment)
 - Removed LFC_HOME variable and single usage in class declaration and to_native_lfn() (SiteMover)
-- Added --makeflags=$MAKEFLAGS option to asetup in getJobExecutionCommand(), requested by Asoka De Silva (ATLASExperiment)
+- Added --makeflags=$MAKEFLAGS option to asetup in getJobExecutionCommand() and getProperASetup(), requested by Asoka De Silva (ATLASExperiment)
+
+Limit number of MemoryMonitor restarts, requested by Rodney Walker
+- Added utility_subprocess_launches variables + handling to __main__() (RunJob, RunJobEvent)
 
 Same user multi-job request by Emmanouil Vamvakopoulos
 - Added allowSameUser boolean and prodUserID (environment)
