--- a/CHANGES
+++ b/CHANGES
@@ -334,6 +334,13 @@ General changes
 - Removed LFC_HOME variable and single usage in class declaration and to_native_lfn() (SiteMover)
 - Added --makeflags=$MAKEFLAGS option to asetup in getJobExecutionCommand() and getProperASetup(), requested by Asoka De Silva (ATLASExperiment)
 - Added exception for log file in __checkPayloadStdout() (Monitor)
+- Created extractOutputFiles() used by __main__ in RunJob instead of extractOutputFilesJSON() (FileHandling, RunJob)
+
+Send DB info in jobMetrics, requested by Rodney Walker
+- Created getDBInfo() (FileHandling)
+- Added dbTime, dbData job object strings (Job)
+- Added call to getDBInfo() from extractJobInformation() (ErrorDiagnosis)
+- Now adding dbTime and dbData to jobMetrics in getJobMetrics() (PandaServerClient)
 
 Limit number of MemoryMonitor restarts, requested by Rodney Walker
 - Added utility_subprocess_launches variables + handling to __main__() (RunJob, RunJobEvent)
