--- a/CHANGES
+++ b/CHANGES
@@ -341,6 +341,8 @@ Send DB info in jobMetrics, requested by Rodney Walker
 - Added dbTime, dbData job object strings (Job)
 - Added call to getDBInfo() from extractJobInformation() (ErrorDiagnosis)
 - Now adding dbTime and dbData to jobMetrics in getJobMetrics() (PandaServerClient)
+- Added dbTime and dbData to updateJobInfo() (RunJobUtilities)
+- Added dbTime and dbData to handle() (UpdateHandler)
 
 Limit number of MemoryMonitor restarts, requested by Rodney Walker
 - Added utility_subprocess_launches variables + handling to __main__() (RunJob, RunJobEvent)
