--- a/CHANGES
+++ b/CHANGES
@@ -407,8 +407,12 @@ Event service
 - Created getObjectstoreInfoFile(), getObjectstorePath(), getObjectstoreFilename(), getObjectstoreBucketID() (SiteInformation)
 - Renamed old getObjectstorePath() to getObjectstorePathOld() - to be removed shortly (SiteInformation)
 - Created getObjectstoresInfo() (SiteInformation)
-- Created getObjectstoreField() (SiteInformation)
+- Created getObjectstoresField() (SiteInformation)
 - Created getObjectstorePath() (SiteInformation)
+- Now using getObjectstoresField() instead of getObjectstoreName() and getObjectstoreBucketEndpoint() in transferLogFile() (JobLog)
+- Now using getObjectstoresField() and new getObjectstorePath() instead of old getObjectstorePath() in transferLogFile() (JobLog)
+- Updated call to getObjectstoresField() in getFileInfo() (Mover)
+- Updated two calls to getObjectstorePath(), and using getObjectstoresField() in getFileInfo() (Mover)
 
 Direct access updates (to enable this functionality for ES)
 - Using transferType fax in shouldPFC4TURLsBeCreated()
