--- a/CHANGES
+++ b/CHANGES
@@ -413,6 +413,9 @@ Event service
 - Now using getObjectstoresField() and new getObjectstorePath() instead of old getObjectstorePath() in transferLogFile() (JobLog)
 - Updated call to getObjectstoresField() in getFileInfo() (Mover)
 - Updated two calls to getObjectstorePath(), and using getObjectstoresField() in getFileInfo() (Mover)
+- Using new getObjectstoresField() instead of getObjectstoreName() in getNewOSStoragePath() (Mover)
+- Using new getObjectstoresField() and getObjectstorePath() instead of old getObjectstorePath() in getDDMStorage() (Mover)
+- Updated calls to getObjectstoresField() (S3ObjectstoreHttpSiteMover, S3ObjectstoreSiteMover, SiteInformation)
 
 Direct access updates (to enable this functionality for ES)
 - Using transferType fax in shouldPFC4TURLsBeCreated()
