--- a/CHANGES
+++ b/CHANGES
@@ -319,7 +319,7 @@ pUtil.createLockFile(False, self.__env['jobDic'][k][1].workdir, lockfile="MEMORY
 
 General changes
 - Added taskId argument to addEnvVars2Cmd() (ATLASExperiment)
-- Now sending job.taskID to addEnvVars2Cmd() from getJobExecutionCommand() and getJobExecutionCommandOld() (ATLASExperiment)
+- Now sending job.taskID to addEnvVars2Cmd() from getJobExecutionCommand() and getJobExecutionCommandOld() (ATLASExperiment, NordugridATLASExperiment)
 - Added taskId to FRONTIER_ID (taskId#jobId) in addEnvVars2Cmd(), requested by Rodney Walker (ATLASExperiment)
 - Simplified call to mover_put_data() from stageOut() (RunJob, RunJobEvent)
 - Simplified call to mover_put_data() from transferActualLogFile(), transferAdditionalFile() (JobLog)
