--- a/CHANGES
+++ b/CHANGES
@@ -205,6 +205,18 @@ AMS Experiment
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.1:
+
+Bug fixes:
+- Correction for unexpected values (dbData/dbTime=null) in jobReport, in getDBInfo() (FileHandling)
+- Corrected for missing error code in errorToReport() masking the actual error [problem seen with older pilot version 64.5] (LocalSiteMover)
+
+General changes:
+- Added try-statement around cpu time adding in getCPUTimes() to preempt any strange values in jobReport (FileHandling)
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
