--- a/CHANGES
+++ b/CHANGES
@@ -217,6 +217,14 @@ General changes:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.2:
+
+Relaxed the input file verification in get_data() to allow for direct access, requested by D. Cameron and A. Filipcic (mvSiteMover)
+
+[testing at analy_uio etc, see ATLASSiteInformation]
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
