Manual code merge from main-dev

--- a/CHANGES
+++ b/CHANGES
@@ -219,9 +219,21 @@ General changes:
 
 65.2:
 
-Relaxed the input file verification in get_data() to allow for direct access, requested by D. Cameron and A. Filipcic (mvSiteMover)
+General changes:
+- Added debugging (sys.exc_info()) info when list_replicas() fails with 'empty dictionary' in getRucioReplicaDictionary() (Mover)
 
-[testing at analy_uio etc, see ATLASSiteInformation]
+Bug fixes:
+- Removed call to getDDMStorage() which overwrote alternative bucket id (Mover)
+
+OS log transfers:
+- Ignoring failed OS log transfer and resetting os_bucket_id, in transferActualLogFile() (JobLog)
+
+Direct Access on ND:
+- Relaxed the input file verification in get_data() to allow for direct access, requested by D. Cameron and A. Filipcic (mvSiteMover)
+
+Memory monitoring:
+- Now enforcing maxPSS from memory monitor is less than 2*maxRSS from schedconfig, otherwise kill job for non-CGROUPS sites, in __check_memory_usage() (Monitor)
+
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
