--- a/CHANGES
+++ b/CHANGES
@@ -224,6 +224,8 @@ General changes:
 
 Bug fixes:
 - Removed call to getDDMStorage() which overwrote alternative bucket id (Mover)
+- Adding --directIn for transferType fax and direct_access_wan = True, in getAnalysisRunCommand() (ATLASExperiment)
+- Setting old/newPrefix="" in getFileAccessInfo() (SiteInformation)
 
 OS log transfers:
 - Ignoring failed OS log transfer and resetting os_bucket_id, in transferActualLogFile() (JobLog)
@@ -231,8 +233,23 @@ OS log transfers:
 Direct Access on ND:
 - Relaxed the input file verification in get_data() to allow for direct access, requested by D. Cameron and A. Filipcic (mvSiteMover)
 
+Direct access updates:
+- Now accepting writeToFile directive for non-ES jobs in setJobDef() (Job)
+- Sending eventservice variable to writeToInputFile() from setJobDef() (Job)
+- Added eventservice argument to writeToInputFile() (pUtil)
+- Selecting --inputHitsFile or --inputAODFile depending on value of eventservice variable in writeToInputFile() (pUtil)
+- Updated updateDispatcherData4ES(), updateJobPars() to work not only with ES jobs (pUtil)
+
 Memory monitoring:
 - Now enforcing maxPSS from memory monitor is less than 2*maxRSS from schedconfig, otherwise kill job for non-CGROUPS sites, in __check_memory_usage() (Monitor)
+
+Updates from Wen Guan:
+- Yoda accounting and monitoring: report cpu hour info and processed events to pilot. Pilot then reports theis info to panda with jobMetrics
+- ES zip: Yoda ES zip outputs; Grid job ES zip outputs(RunJobEvent), unzip ES when merging(RunJob)
+- Report MPI job id to panda in jobMetrics
+- Added bulk update event ranges to RunJobEvent
+- Fixed os_bucket_id in Yoda
+- Fixed RunJobEvent with race condition: When asynchronousOutputStager, updateEventRange and main thread getEventRange are running at the same time, the curl.config will be override and asynchronousOutputStager may crash
 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
