Updates from Wen

--- a/CHANGES
+++ b/CHANGES
@@ -270,6 +270,14 @@ Added missing factor of 2 in maxrss (Monitor)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+65.4:
+
+Updates from Wen Guan:
+- Created init_guid_list() (RunJobEvent)
+- Using new function init_guid_list() to fix problem with having more than one input file in event service job (RunJobEvent)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
